--- a/src/App.css
+++ b/src/App.css
@@ -200,6 +200,19 @@
    -------------------------- country
 */
 
+.sort-btn{
+    padding: 10px 20px;
+    font-size: 20px;
+    background-color: #e25f5f;
+    color: rgb(250, 250, 250);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    cursor: pointer;
+    margin-left: 100px;
+}
+
 .country__section{
     margin-top: 50px;
     padding: 0px 20px;
@@ -232,18 +245,32 @@
 }
 
 .characteristics{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    div{
+    .characteristic{
         width: 500px;
-        height: 120px;
+        height: 700px;
         background-color: #BB0000; 
         color: white;
         font-size: 30px;
         display: flex;
-        align-items: center;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+
+        .like-icon{
+            width: 100%;
+            text-align: center;
+            margin-top: 100px;
+            font-size: 50px;
+            color: yellow;
+            background-color: rgba(0, 0, 0, 0.123);
+            display: flex;
+            text-align: center;
+            justify-content: center;
+            gap: 30px;
+            padding: 30px;
+            cursor: pointer;
+            user-select: none;
+        }
     };
 }
 
